fix: overflow

--- a/src/routes/provider/ProviderInfo.css
+++ b/src/routes/provider/ProviderInfo.css
@@ -9,6 +9,7 @@
   align-items: center;
   background-color: var(--background-base);
   padding: 2rem;
+  overflow-y: auto;
 }
 
 .provider-info--main {
